# programming

./: .gitignore  README.md
pictures/: jpeg(1)
university-labs/: laba8.c
university-labs/laba9/: README.md  sort.c
university-labs/laba__10/: laba10.1.h  laba10.2.c  laba10.c
university-labs/laba__12/: README.md  carsFunction.c  carsHeader.h  main.c
university-labs/laba__13/: CMakeLists.txt  Makefile  README.md
university-labs/laba__13/for5/C-Programming/cmake_task/: CMakeLists.txt
university-labs/laba__13/for5/C-Programming/cmake_task/background/: CMakeLists.txt
university-labs/laba__13/for5/C-Programming/cmake_task/pipes/: CMakeLists.txt
university-labs/laba__13/include/: carsHeader.h
university-labs/laba__14/: .gitignore  README.md  main.c
university-labs/laba__15/: README.md  database.rle  images.rle  main  main.c  staff.csv
university-labs/laba__6/: laba6.c
university-labs/laba__9/: sort.c
university-labs/output/: laba8
